[tool.poetry]
name = "specials"
version = "0.0.8"
description = ""
authors = ["Mika Hänninen <mika.hanninen@gmail.com>"]
license = "MIT"
readme = "README.md"

packages = [
	{ include = "SapGuiLibrary", from = "specials/vendor" },
	{ include = "pendulum", from = "specials/vendor" },
	{ include = "docx", from = "specials/vendor" },
	{ include = "fire", from = "specials/vendor" },
	{ include = "pymeeus", from = "specials/vendor" },
	{ include = "pyperclip", from = "specials/vendor" },
	{ include = "stringcase", from = "specials/vendor" },
	{ include = "validators", from = "specials/vendor" },
	{ include = "htmldocx", from = "specials/vendor" },
]

[tool.poetry.dependencies]
python = "^3.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"